# Truck-Platoon-2

./: untitled.fig  untitled1.fig
tm_experiment_control/: package.xml  setup.cfg  setup.py
tm_experiment_control/launch/: deterministic_experiment.launch.py  tm_experiment.launch.py
tm_experiment_control/resource/: tm_experiment_control
tm_experiment_control/tm_experiment_control/: __init__.py  deterministic_scenario_runner.py  tm_agents.py  tm_platoon_model.py  tm_scenario_runner.py
truck_control/: setup.py
truck_control/matlab/: plot_backup_soc_bar_at_truck0_40.m  plot_backup_soc_vs_distance.m  plot_per_lap_energy.m
truck_control/truck_control/: carla_spectator_follower.py  command_publisher.py  energy_dashboard.py  energy_soc_bridge.py  lane_detect.py  lane_following_node.py  platooning_manager.py  soc_cycle_dashboard.py
